<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Login">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

	    <RelativeLayout 
	        android:layout_gravity="top"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp" >
	        
	    	<ImageView 
	        	android:layout_gravity="top"
	        	android:layout_height="fill_parent"
	        	android:layout_width="fill_parent"
	        	android:src="@drawable/barra_top"
	        	android:adjustViewBounds="false"
	        	android:scaleType="fitXY"
	        	android:contentDescription="@string/lbl_textoiniciosesion"
	        	/>
	    	<TextView
		        android:id="@+id/txtTitulo"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
				android:gravity="right"
		        android:textColor="#ffffff"
		        android:textSize="16sp"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="5dp"
		        android:layout_marginTop="0dp"
		        android:textStyle="bold"
		        android:text="@string/txtTituloRecordarPass"
		        android:singleLine="true"
		   		android:ellipsize="end" />
	    		         
	    </RelativeLayout>
        <LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		  	android:layout_gravity="top"
	    	android:gravity="center"
		    android:padding="10dp">
	    	
	           	    <TextView
				        android:id="@+id/txtTextoInicioSesion"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/lbl_textoRecordarPass"
				        android:textSize="16sp" 
				        android:gravity="center"
				        android:layout_marginTop="0dp"
				        android:textColor="#0093d8" />
			        
				    <EditText
				        android:id="@+id/txtUsuarioID"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/txt_usuario_login"
				        android:textSize="14sp"
				        android:textColor="#000000" 
				        android:background="#ffffff"
				        android:padding="5dp"
				        android:layout_marginTop="10dp"
				        android:maxLength="50"
				        android:inputType="textEmailAddress"
				        />
				    
				    <Button
				        android:id="@+id/btnRecordarPass"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center_vertical"
				        android:text="@string/btnRecordarPass"
				        android:drawableLeft="@drawable/power"
				        android:background="#455D80"
				        android:paddingLeft="20dp"
				        android:paddingRight="20dp"
				        android:paddingTop="5dp"
				        android:paddingBottom="5dp"
				        android:layout_marginTop="20dp"
				        android:textSize="14sp"
				        android:textColor="#ffffff"
				        android:gravity="right|center_vertical" 
				         />
				    
				    <TextView
						        android:id="@+id/txtMensajeInfoRecordarPass"
						        android:layout_width="fill_parent"
						        android:layout_height="wrap_content"
						        android:text="@string/txtMensajeInfoRecordarPass"
						        android:textSize="14sp" 
						        android:gravity="center"
						        android:layout_marginTop="20dp"
						        android:textColor="#000000" />
				    
				</LinearLayout>
			</LinearLayout>

		<LinearLayout 
	        android:layout_gravity="bottom"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp" >
	    	<ImageView 
	        	android:layout_gravity="bottom"
	        	android:layout_height="fill_parent"
	        	android:layout_width="fill_parent"
	        	android:src="@drawable/barra_down"
	        	android:adjustViewBounds="false"
	        	android:scaleType="fitXY"/>    
	        
	    </LinearLayout>    

</FrameLayout>