<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo_login"
    android:gravity="center"
    android:adjustViewBounds="false"
    tools:context="${relativePackage}.${activityClass}" 
    android:orientation="vertical">
	
	<LinearLayout
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:padding="10dp"
	    android:gravity="top"
	    android:orientation="vertical" >
    			<ImageView
				            android:id="@+id/img_logo_ofertapp"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:src="@drawable/logo_ofertapp"
				            android:layout_gravity="center"
				            android:adjustViewBounds="true"
				            android:contentDescription="@string/logo_anspe" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
   		android:layout_height="fill_parent"
	    android:layout_gravity="bottom"
	    android:adjustViewBounds="false"
	    android:padding="10dp"
	    android:gravity="bottom"
	    android:orientation="vertical"
	    >
	    
        <Button
	        android:id="@+id/btnRegistro"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:text="@string/btn_usuarioregistro"
	        android:drawableLeft="@drawable/power"
	        android:background="#455D80"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:paddingTop="0dp"
	        android:paddingBottom="0dp"
	        android:textSize="14sp"
	        android:textColor="#ffffff"
	        android:gravity="right|center_vertical"
	         />
        
         <Button
		        android:id="@+id/btnIniciarSesion"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:text="@string/btn_usuario_iniciar_sesion"
		        android:drawableLeft="@drawable/power"
		        android:background="#455D80"
		        android:paddingLeft="20dp"
		        android:paddingRight="20dp"
		        android:paddingTop="5dp"
		        android:paddingBottom="5dp"
		        android:textSize="14sp"
		        android:textColor="#ffffff"
		        android:gravity="right|center_vertical" 
		        android:layout_marginTop="10dp"/>
         
         
         	<ListView
        		android:id="@+id/list"
        		android:layout_height="wrap_content"
        		android:layout_width="match_parent"
        		android:divider="@null"
				android:dividerHeight="0dp">
    		</ListView>
         
    </LinearLayout>
    
	
    

</LinearLayout>
